--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <li><a href="#project" class="scroll effect" data-speed="1400">PROJECT</a></li>
                         <li><a href="#social" class="scroll effect" data-speed="1600">SOCIAL</a></li>
                         <li><a href="#contact" class="scroll effect" data-speed="1700">CONTACT</a></li>
-                        <li><a href="doc/Hammed-Olalekan-Osanyinpeju-co-CV.pdf" class="scroll effect" data-speed="1700">CV</a></li>
+                        <li><a href="doc/Hammed-Olalekan-Osanyinpeju-co-CV.pdf" download class="scroll effect" data-speed="1700">CV</a></li>
                     </ul>
                 </div><!-- End navbar-collapse -->
 
