--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <meta name="keyword" content="Hammed, Olalekan, Osanyinpeju, software, Engineer, App, web, php, JavaScript, React, HTML5, CSS3, DevOps, administrator, system">
 
-    <meta name="description" content="Graduate Chemical Engineer, software programmer, mobile and web app developer, System administrator, DevOps. I am a passionate and enthusiast software programmer. My programming expertise cut across building desktop applications, mobile applications, web applications, system administration, networking and general software engineering. One of my major interest is building applications for all platforms which makes me open to learning as much programming language as possible.">
+    <meta name="description" content="Software programmer, mobile and web app developer, System administrator, DevOps and Graduate Chemical Engineer. I am a passionate and enthusiast software programmer. My programming expertise cut across building desktop applications, mobile applications, web applications, system administration, networking and general software engineering. One of my major interest is building applications for all platforms which makes me open to learning as much programming language as possible.">
 
 
     <meta property="og:type" content="website">
@@ -20,7 +20,7 @@
 
     <meta property="og:image" content="img/hammed-olalekan-osanyinpeju72x72.png">
 
-    <meta property="og:description" content="Graduate Chemical Engineer, software programmer, mobile and web app developer, System administrator, DevOps. I am a passionate and enthusiast software programmer. My programming expertise cut across building desktop applications, mobile applications, web applications, system administration, networking and general software engineering. One of my major interest is building applications for all platforms which makes me open to learning as much programming language as possible.">
+    <meta property="og:description" content="Software programmer, mobile and web app developer, System administrator, DevOps, and Graduate Chemical Engineer. I am a passionate and enthusiast software programmer. My programming expertise cut across building desktop applications, mobile applications, web applications, system administration, networking and general software engineering. One of my major interest is building applications for all platforms which makes me open to learning as much programming language as possible.">
 
 
     <meta name="author" content="Hammed Olalekan Osanyinpeju">
