--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <img src="img/hammed-olalekan-osanyinpeju.jpg" alt="avatar-hero">
                 </div>
                 <h1>Hammed Olalekan Osanyinpeju</h1>
-                <h2 class="typer-title">Graduate Chemical Engineer, software programmer, mobile and web app developer, System administrator, DevOps...</h2>
+                <h2 class="typer-title">Software programmer, mobile and web app developer, System administrator, DevOps, and Graduate Chemical Engineer.</h2>
                 <a href="#about" class="scroll home-s-btn hor-center"><span class="dot center"></span></a>
             </div>
         </div>
